namespaces/live.cloud-platform.service.justice.gov.uk/victims-pathfinder/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "victims-pathfinder"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "victims-pathfinder"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Victims Pathfinder: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/victims-pathfinder"
    cloud-platform.justice.gov.uk/team-name: "victims-pathfinder"
    cloud-platform.justice.gov.uk/review-after: ""
